lib/kitt/tmpl/addons/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-prometheus
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: __AUTH_SECRET__
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "True"
spec:
  ingressClassName: nginx
  rules:
  - host: 'prometheus.__CLUSTER_DOMAIN__'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: __RELEASE__-kube-prometheus-prometheus
            port:
              number: 9090
  - host: 'prometheus-alertmanager.__CLUSTER_DOMAIN__'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: __RELEASE__-kube-prometheus-alertmanager
            port:
              number: 9093
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "True"
spec:
  ingressClassName: nginx
  rules:
  - host: 'grafana.__CLUSTER_DOMAIN__'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: __RELEASE__-grafana
            port:
              number: 80
